搜索结果页面

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,8 @@
 .van-nav-bar {
   background-color: #3296fa;
 }
-.van-nav-bar .van-nav-bar__title {
+.van-nav-bar .van-nav-bar__title,
+.van-nav-bar .van-icon-arrow-left,
+.van-nav-bar .van-nav-bar__text {
   color: #fff;
 }
