--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,6 +1,6 @@
 .van-nav-bar {
     background-color: #3296fa;
-    .van-nav-bar__title {
+    .van-nav-bar__title,.van-icon-arrow-left,.van-nav-bar__text {
       color: #fff;
     }
 }
